--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "jaideep/helloworld",
   "description": "A sample Hello World package for Laravel",
   "type": "library",
-  "version": "1.0.1",
+  "version": "dev-main",
   "autoload": {
     "psr-4": {
       "Jaideep\\HelloWorld\\": "src/"
